--- a/assets/css/styles-3.css
+++ b/assets/css/styles-3.css
@@ -334,4 +334,7 @@ used for profile image
   .sidebar-wrapper {
     display:none;
   }
+  .experiences-section .item {
+    page-break-inside: avoid;
+  }
 }
