--- a/_includes/printable-header.html
+++ b/_includes/printable-header.html
@@ -1,5 +1,5 @@
 <!-- Use icons from fontawesome when you are adding new item in the contact list  -->             
-     <div class="printable-header">
+     <div class="printable printable-header">
             <div class="profile-container">
                 <img class="profile-img" src="{{site.baseurl}}/assets/images/{% if site.data.info.pic %}{{ site.data.info.pic }}{% else %}profile.png{% endif %}" alt="profile picture" />
                 <h1 class="name">{% if site.data.info.fullname %}{{site.data.info.fullname}}{% endif %}</h1>
@@ -38,3 +38,7 @@
                 </ul>
             </div><!--//contact-container-->
         </div>
+       <div class="printable printable-sections">
+	   {% include interests.html %}
+           {% include language.html %}
+       </div>
