--- a/_includes/printable-about.html
+++ b/_includes/printable-about.html
@@ -1,8 +1,11 @@
 <div class="printable printable-sections">
-  <div class="col-lg-6">
+  <div class="col-xs-4">
+  {% include skills.html %}
+  </div>
+  <div class="col-xs-4">
   {% include interests.html %}
   </div>
-  <div class="col-lg-6">
+  <div class="col-xs-4">
   {% include language.html %}
   </div>
 </div>
