--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,7 +2,7 @@
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
 				{% for skill in site.data.info.skills %}
                 <div class="skill">
-                    <p class="skill-title"><span>{{skill.name}}</span> - <span class="skill-tagline">{{skill.notes}}</span>                    
+                    <p class="skill-title"><span>{{skill.name}}</span> - <span class="skill-tagline">{{skill.notes}}</span></p>                  
                 </div><!--//item-->
 				{% endfor %}
                   
