--- a/_includes/printable-about.html
+++ b/_includes/printable-about.html
@@ -1,4 +1,4 @@
-<div class="printable printable-sections">
+<div class="row printable printable-sections">
   <div class="col-xs-4">
   {% include skills.html %}
   </div>
