--- a/_includes/language.html
+++ b/_includes/language.html
@@ -1,5 +1,5 @@
 <div class="languages-container container-block">
-<h2 class="container-block-title">Languages</h2>
+<h2 class="container-block-title"><i class="fa fa-language"></i> Languages</h2>
 <ul class="list-unstyled interests-list">
 {% for lang in site.data.info.languages %}
 <li>{{interest}}</li>
