--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,5 +1,5 @@
 <div class="interests-container container-block">
-<h2 class="container-block-title"><i class="fa fa-heart"></i> Interests</h2>
+<h2 class="section-title"><i class="fa fa-heart"></i> Interests</h2>
 <ul class="list-unstyled interests-list">
 {% for interest in site.data.info.interests %}
 <li>{{interest}}</li>
