--- a/assets/css/styles-3.css
+++ b/assets/css/styles-3.css
@@ -336,6 +336,9 @@ used for profile image
 .printable-header {
   margin-bottom:30px;
 }
+ .printable-header a[href]:after {
+    content: "";
+  }
   .sidebar-wrapper {
     display:none;
   }
